--- a/views/map.html
+++ b/views/map.html
@@ -100,6 +100,14 @@
             box-shadow: 0px 0px 8px #1f4277;
             border: 7px solid #08162b;
         }
+
+        .inner_wrapper {
+            text-align: justify;
+        }
+
+        .clan {
+            width: 100%;
+        }
     </style>
 </head>
 <body>
@@ -163,12 +171,38 @@
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 <br><br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                <br><br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                <br><br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            
+                                
+                <br><br><div class="t2">Rangos de maestría</div><br>
+                En la academia de Narysium no importa cuantos años transcurras estudiando en ella, mas la estancia de aquellos alumnos que se entregan a la labor de adquirir conocimientos de la magia es lo que determina si estan a la altura de lograr un ascenso.
+
+                <br><br><b>— Neófito</b>: Suele comprender el primer año de estudio de los estudiantes, pues es raro que transcurrido dicho periodo el consejo no considere el ascenso.
+                <br><br><b>— Aprendiz</b>: Hábiles, se desenvuelven sin problemas con la magia intermedia pero no conocen la profundidad y sus secretos de la misma.
+                <br><br><b>— Veterano</b>: Han descubierto algunas magias avanzadas o el nombre oculto de un aspecto de la naturaleza, pueden moldear dicho elemento sin requerir un intercambio de energía por su parte.
+                <br><br><b>— Maestro</b>: Son muy pocos los que alcanzan el rango de Maestro, suelen ser alumnos especializados en una rama concreta de la magia, expertos en un elemento especifico, conocedores de absolutamente todos sus secretos.
+                <br><br><b>— Profesor</b>: Algunos alumnos que han alcanzado el nivel de Maestro abandonan la escuela cuando notan que ya no aprenden nada nuevo, otros deciden compartir sus conocimientos al resto de alumnos. Aunque hay profesores de otros orígenes cuyos conocimientos van más allá del mundo de Narysium.
+                
+                <br><br><div class="t2">Clanes</div><br>
+                Para la academia, el amparo de los espíritus guardianes tiene bastante peso, por ello dividen a sus alumnos en distintos grupos para la convivencia segun dicha afinidad.
+                <div class="container">
+                    <div class="row">
+                        <div class="col-6"><center><img class="clan" src=""></img></center></div>
+                        <div class="col-6"><center><img class="clan" src=""></img></center></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6"><center><img class="clan" src=""></img></center></div>
+                        <div class="col-6"><center><img class="clan" src=""></img></center></div>
+                    </div>
+                </div>
+
+                
+
+                <br><br><div class="t2">Lugares</div><br>
+                <b>— El archivo</b>: Una alta torre de tres paredes casi tan alta como la torre observatorio. Un laberito de estanterías en la oscuridad cuyo interior es más laberíntico a medida que te adentras en él. No se permite el acceso con luz candente.
+                <br><br><b>— Comedor</b>:
+                <br><br><b>— Cocinas</b>:
+                <br><br><b>— Jardines</b>:
+                <br><br><b>— Invernaderos</b>:
+                <br><br><b>— Residencia de profesores</b>:
                 </p>
         `);
     });
