--- a/views/normas.html
+++ b/views/normas.html
@@ -6,6 +6,7 @@
     <br><br><b>— Mutuals</b>: Es necesario que sigas a todos los miembros a los que sigue @narysiumrol, así como la misma cuenta, no utilizamos una lista para los miembros ya que no la necesitamos.
     <br><br><b>— Hashtag</b>: Es importante que el hashtag #NSR sea visible en el perfil para que se refleje que es miembro de nuestra comunidad.
     <br><br><b>— Nickname</b>: También es importante que en el "@" de twitter, tenga la cadena <b>nsr</b> de la combinación que se prefiera.
+    <br><br><b>— Creando el PJ</b>: Para una guía de la cración de tu personaje en el menú de navegación pulsa el icono de los dados. Es recomendable que leas un poco del mapa para tener una idea de como está formado el mundo de Narysium.
 <br><br>
 <div class="t2">Cuentas</div>
     <br><br><b>— Multicuentas</b>: No hay un límite para las multicuentas, puedes tener dentro del fake tantos OC como quieras mientras sean activos.
