--- a/views/map.html
+++ b/views/map.html
@@ -107,6 +107,7 @@
 
         .clan {
             width: 100%;
+            padding: 24px 35px 0px 35px;
         }
     </style>
 </head>
@@ -169,11 +170,10 @@
         $('.inner_wrapper').html(`
             <h2>Academia magna</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                <br><br>
+                La Academia Magna sirve de hogar a infinidad de razas que acuden a ella tras venir de otro mundo y buscaban un hogar, o bien te atrajo los conocimientos que alberga en su interior, por recomendación de un maestro mago errante que vio potencial en ti.
                                 
                 <br><br><div class="t2">Rangos de maestría</div><br>
-                En la academia de Narysium no importa cuantos años transcurras estudiando en ella, mas la estancia de aquellos alumnos que se entregan a la labor de adquirir conocimientos de la magia es lo que determina si estan a la altura de lograr un ascenso.
+                No importa cuantos años transcurras estudiando en la academia, pues la estancia de aquellos alumnos que se entregan a la labor de adquirir cada vez más conocimientos de la magia es lo que determina si estan a la altura de lograr un ascenso. A veces incluso ocurre que no tienen donde caer muerto y se esfuerzan por mejorar para no perder su sitio.
 
                 <br><br><b>— Neófito</b>: Suele comprender el primer año de estudio de los estudiantes, pues es raro que transcurrido dicho periodo el consejo no considere el ascenso.
                 <br><br><b>— Aprendiz</b>: Hábiles, se desenvuelven sin problemas con la magia intermedia pero no conocen la profundidad y sus secretos de la misma.
@@ -185,24 +185,74 @@
                 Para la academia, el amparo de los espíritus guardianes tiene bastante peso, por ello dividen a sus alumnos en distintos grupos para la convivencia segun dicha afinidad.
                 <div class="container">
                     <div class="row">
-                        <div class="col-6"><center><img class="clan" src=""></img></center></div>
-                        <div class="col-6"><center><img class="clan" src=""></img></center></div>
+                        <div class="col-6">
+                        <center>
+                            <img class="clan" src="/assets/clanes/zanark.png"></img><br><br>
+                            <p>
+                                Zanark<br><br>
+                                Al clan de Zanark son destinados todos aquellos escogidos por <i>El aventurero</i>.
+                            </p>
+                        </center>
+                        </div>
+                        
+                        <div class="col-6">
+                        <center>
+                            <img class="clan" src="/assets/clanes/orion.png"></img><br><br>
+                            <p>
+                                Orion<br><br>
+                                Orion está reservado para aquellos escogidos por <i>El crítico</i>.
+                            </p>
+                        </center>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-6"><center><img class="clan" src=""></img></center></div>
-                        <div class="col-6"><center><img class="clan" src=""></img></center></div>
+                        <div class="col-6">
+                        <center>
+                            <img class="clan" src="/assets/clanes/cetus.png"></img><br><br>
+                            <p>
+                                Cetus<br><br>
+                                Aquellos elegidos por <i>El sutil</i> son destinados al clan de Cetus.
+                            </p>
+                        </center>
+                        </div>
+                        <div class="col-6">
+                        <center>
+                            <img class="clan" src="/assets/clanes/eridan.png"></img><br><br>
+                            <p>
+                                Eridan<br><br>
+                                Eridan se honra de acoger a aquellos cobijados por <i>El observador</i>.
+                            </p>
+                        </center>
+                        </div>
+                        
                     </div>
                 </div>
 
                 
 
                 <br><br><div class="t2">Lugares</div><br>
-                <b>— El archivo</b>: Una alta torre de tres paredes casi tan alta como la torre observatorio. Un laberito de estanterías en la oscuridad cuyo interior es más laberíntico a medida que te adentras en él. No se permite el acceso con luz candente.
+                <b>— Jardines</b>:
+                <br><br><b>— El archivo</b>: Una alta torre de tres paredes casi tan alta como la torre observatorio. Un laberito de estanterías en la oscuridad cuyo interior es más laberíntico a medida que te adentras en él. No se permite el acceso con luz candente.
+                <br><br><b>— Vestíbulo</b>:
                 <br><br><b>— Comedor</b>:
                 <br><br><b>— Cocinas</b>:
-                <br><br><b>— Jardines</b>:
+                
                 <br><br><b>— Invernaderos</b>:
                 <br><br><b>— Residencia de profesores</b>:
+
+                <br><br><div class="t2">Materias</div><br>
+                Las materias en <i>La Academia</i> no son como uno esperaría. No todos los alumnos asisten a las mismas asignaturas porque cada alumno es libre de asistir a la materia que mas le interese. Hay horarios para el nivel básico, intermedio y avanzado de cada una de las materias, y, Excepto las obligatorias como Simpatismo o Hechicería y Maref, son los alumnos los que deciden a cuales acudir segun sus preferencias.<br>
+
+                <br><br><b>— Simpatismo</b>: Se trata de la manipulación de los vínculos inherentes entre las diferentes cosas, pasando energía de unos a otros. Como por ejemplo repartir energía cinética en mover una moneda distante con otra similar. 
+                <br><br><b>— Hechicería</b>: Si el simpatismo se encargaba de la manipulación del intercambio de energía en la materia, la hechicería se encarga de usar el maná interno mediante palabras arcanas para mutar esa propia energía. 
+                <br><br><b>— Maref</b>: Clases de acondicionamiento físico, clases de vuelo, natación, buceo, escalada. 
+                <br><br><b>— Nominación</b>: Se basa en conocer y manipular el poder subyacente en los nombres de las cosas.
+                <br><br><b>— Criaturas mágicas</b>: Estudio de las criaturas del mundo mágico.
+                <br><br><b>— Herbología</b>: Estudio de las plantas y hongos tanto mágicos como mundanos.
+                <br><br><b>— Artificería</b>: Rama de la magia que combina conceptos de la ingeniería y la magia para crear artefactos mágicos.
+                <br><br><b>— Runología</b>: Es posible almacenar el intercambio de energía usado con simpatía en objetos como las runas.
+                <br><br><b>— Mentalismo</b>: Enseña la capacidad de asaltar mentes, crear ilusiones, pero a su vez te ayuda a protegerte de ello mediante la oclumancia. 
+                <br><br><b>— Historia</b>: Enseña la capacidad de asaltar mentes, crear ilusiones, pero a su vez te ayuda a protegerte de ello mediante la oclumancia.   
                 </p>
         `);
     });
