--- a/views/map.html
+++ b/views/map.html
@@ -252,7 +252,7 @@
                 <br><br><b>— Artificería</b>: Rama de la magia que combina conceptos de la ingeniería y la magia para crear artefactos mágicos.
                 <br><br><b>— Runología</b>: Es posible almacenar el intercambio de energía usado con simpatía en objetos como las runas.
                 <br><br><b>— Mentalismo</b>: Enseña la capacidad de asaltar mentes, crear ilusiones, pero a su vez te ayuda a protegerte de ello mediante la oclumancia. 
-                <br><br><b>— Historia</b>: Enseña la capacidad de asaltar mentes, crear ilusiones, pero a su vez te ayuda a protegerte de ello mediante la oclumancia.   
+                <br><br><b>— Historia</b>: Repasa los acontecimientos historicos transcurridos en el universo de Narysium.   
                 </p>
         `);
     });
