--- a/views/journal.html
+++ b/views/journal.html
@@ -1,6 +1,7 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Creando al personaje</h1>
-<div class="t2">Ingreso</div>
+<div class="t2">La ficha</div>
+Esto será una guía resumida de lo que deberá reflejar tu ficha
 
 <%- include(`./partials/bot-part.html`) %>
 
