--- a/views/map.html
+++ b/views/map.html
@@ -190,7 +190,7 @@
                             <img class="clan" src="/assets/clanes/zanark.png"></img><br><br>
                             <p>
                                 Zanark<br><br>
-                                Al clan de Zanark son destinados todos aquellos escogidos por <i>El aventurero</i>.
+                                Al clan de Zanark son destinados todos aquellos escogidos por <i>El aventurero</i>. Su sala común se encuentra escondida tras un cortinar que cambia de sitio cada año.
                             </p>
                         </center>
                         </div>
@@ -200,7 +200,7 @@
                             <img class="clan" src="/assets/clanes/orion.png"></img><br><br>
                             <p>
                                 Orion<br><br>
-                                Orion está reservado para aquellos escogidos por <i>El crítico</i>.
+                                Orion está reservado para aquellos escogidos por <i>El crítico</i>. Su sala común se encuentra pasando por canales bajo el castillo.
                             </p>
                         </center>
                         </div>
@@ -211,7 +211,7 @@
                             <img class="clan" src="/assets/clanes/cetus.png"></img><br><br>
                             <p>
                                 Cetus<br><br>
-                                Aquellos elegidos por <i>El sutil</i> son destinados al clan de Cetus.
+                                Aquellos elegidos por <i>El sutil</i> son destinados al clan de Cetus. Su sala común se encuentra en el último piso atravesando un espejo.
                             </p>
                         </center>
                         </div>
@@ -220,7 +220,7 @@
                             <img class="clan" src="/assets/clanes/eridan.png"></img><br><br>
                             <p>
                                 Eridan<br><br>
-                                Eridan se honra de acoger a aquellos cobijados por <i>El observador</i>.
+                                Eridan se honra de acoger a aquellos cobijados por <i>El observador</i>. Su sala común se encuentra escondida tras una estatua de mármol que porta un escudo en el primer piso. 
                             </p>
                         </center>
                         </div>
@@ -231,14 +231,15 @@
                 
 
                 <br><br><div class="t2">Lugares</div><br>
-                <b>— Jardines</b>:
+                <b>— Jardines</b>: Una gran explanada de verde se extiende en las afueras de la academia, más allá solo hay montañas, el desfiladero picudo y en el otro extremo el puente que conduce a Arcadia.
                 <br><br><b>— El archivo</b>: Una alta torre de tres paredes casi tan alta como la torre observatorio. Un laberito de estanterías en la oscuridad cuyo interior es más laberíntico a medida que te adentras en él. No se permite el acceso con luz candente.
-                <br><br><b>— Vestíbulo</b>:
-                <br><br><b>— Comedor</b>:
-                <br><br><b>— Cocinas</b>:
-                
-                <br><br><b>— Invernaderos</b>:
-                <br><br><b>— Residencia de profesores</b>:
+                <br><br><b>— Vestíbulo</b>: Tras un enorme portón se accede a la diáfana habitación que da paso al resto del castillo.
+                <br><br><b>— Comedor</b>: Conecta con el vestíbulo tras un no muy largo pasillo. Un gran salón está dispuesto de mesas para los alumnos de la academia.
+                <br><br><b>— Cocinas</b>: En ella trabajan duendes, quienes preparan la comida.
+                <br><br><b>— El lago salino</b>: Parece un lago pero en realidad la gran masa de la que está formado proviene del mar, y crecen en el una serie de algas que absorben dicha sal, lo que lo hace parecer un lago dulce con una pizca de sal. 
+
+                <br><br><b>— Invernaderos</b>: Donde se encuntran las plantaciones de los miembros dedicados al cuidado de las mismas.
+                <br><br><b>— Residencia de profesores</b>: No muy lejos del castillo se encuentran una serie de casas donde los profesores descansan.
 
                 <br><br><div class="t2">Materias</div><br>
                 Las materias en <i>La Academia</i> no son como uno esperaría. No todos los alumnos asisten a las mismas asignaturas porque cada alumno es libre de asistir a la materia que mas le interese. Hay horarios para el nivel básico, intermedio y avanzado de cada una de las materias, y, Excepto las obligatorias como Simpatismo o Hechicería y Maref, son los alumnos los que deciden a cuales acudir segun sus preferencias.<br>
