--- a/views/map.html
+++ b/views/map.html
@@ -170,7 +170,7 @@
         $('.inner_wrapper').html(`
             <h2>Academia magna</h2>
             <p>
-                La Academia Magna sirve de hogar a infinidad de razas que acuden a ella tras venir de otro mundo y buscaban un hogar, o bien te atrajo los conocimientos que alberga en su interior, por recomendación de un maestro mago errante que vio potencial en ti.
+                La Academia Magna sirve de hogar a infinidad de razas que acuden a ella tras venir de otro mundo y buscan un hogar, o bien fueron atrañidos por los conocimientos que alberga en su interior, o por simple recomendación de un maestro mago errante que vio potencial en alguno de ellos.
                                 
                 <br><br><div class="t2">Rangos de maestría</div><br>
                 No importa cuantos años transcurras estudiando en la academia, pues la estancia de aquellos alumnos que se entregan a la labor de adquirir cada vez más conocimientos de la magia es lo que determina si estan a la altura de lograr un ascenso. A veces incluso ocurre que no tienen donde caer muerto y se esfuerzan por mejorar para no perder su sitio.
