--- a/views/map.html
+++ b/views/map.html
@@ -173,10 +173,10 @@
                 La Academia Magna sirve de hogar a infinidad de razas que acuden a ella tras venir de otro mundo y buscan un hogar, o bien fueron atrañidos por los conocimientos que alberga en su interior, o por simple recomendación de un maestro mago errante que vio potencial en alguno de ellos.
                                 
                 <br><br><div class="t2">Rangos de maestría</div><br>
-                No importa cuantos años transcurras estudiando en la academia, pues la estancia de aquellos alumnos que se entregan a la labor de adquirir cada vez más conocimientos de la magia es lo que determina si estan a la altura de lograr un ascenso. A veces incluso ocurre que no tienen donde caer muerto y se esfuerzan por mejorar para no perder su sitio.
+                No importa cuantos años transcurras estudiando en la academia, pues la estancia de aquellos alumnos que se entregan a la labor de adquirir cada vez más conocimientos es lo que determina si estan a la altura de lograr un ascenso para el acceso a conocimientos avanzados. Otras veces no es la sed de conocimientos lo que los mueve, sino el hogar que ha quedado arraigado para ellos y la escalera en ascenso ocurre por efecto colateral.
 
-                <br><br><b>— Neófito</b>: Suele comprender el primer año de estudio de los estudiantes, pues es raro que transcurrido dicho periodo el consejo no considere el ascenso.
-                <br><br><b>— Aprendiz</b>: Hábiles, se desenvuelven sin problemas con la magia intermedia pero no conocen la profundidad y sus secretos de la misma.
+                <br><br><b>— Neófito</b>: Suele comprender el primer año de estudio de los adeptos, pues es raro que transcurrido dicho periodo el consejo no considere el ascenso.
+                <br><br><b>— Aprendiz</b>: Hábiles. Se desenvuelven sin problemas con la magia intermedia pero no conocen la profundidad y sus secretos de la misma.
                 <br><br><b>— Veterano</b>: Han descubierto algunas magias avanzadas o el nombre oculto de un aspecto de la naturaleza, pueden moldear dicho elemento sin requerir un intercambio de energía por su parte.
                 <br><br><b>— Maestro</b>: Son muy pocos los que alcanzan el rango de Maestro, suelen ser alumnos especializados en una rama concreta de la magia, expertos en un elemento especifico, conocedores de absolutamente todos sus secretos.
                 <br><br><b>— Profesor</b>: Algunos alumnos que han alcanzado el nivel de Maestro abandonan la escuela cuando notan que ya no aprenden nada nuevo, otros deciden compartir sus conocimientos al resto de alumnos. Aunque hay profesores de otros orígenes cuyos conocimientos van más allá del mundo de Narysium.
