--- a/views/userlist.html
+++ b/views/userlist.html
@@ -8,8 +8,9 @@
                 <tr>
                     <th>Cuenta</th>
                     <th>FC</th>
+                    <th>Rango</th>
+                    <th>Habitac.</th>
                     <th>Activ.</th>
-                    <th>Estado</th>
                 </tr>
             </thead>
             <tbody>
@@ -21,11 +22,20 @@
                     <% } else { %>
                         <td></td>  
                     <% } %> 
-                    <td><%= ix["dhm"] %> días</td>
-                    <% if(ix["status"] == "activo") { %>
-                        <td style="background-color:#a9d8a9"><%= ix["status"] %></td>
+
+                    <% if(datos[ix["name"]]) { %>
+                        <% console.log(datos[ix["name"]]) %>
+                        <td><%= datos[ix["name"]]["rango"] %></td>
+                        <td><%= datos[ix["name"]]["hab"] %></td>
                     <% } else { %>
-                        <td style="background-color: #dac09c;"><%= ix["status"] %></td>
+                        <td></td>  
+                        <td></td>
+                    <% } %> 
+                    
+                    <% if(ix["status"] == "activo") { %>
+                        <td style="background-color:#a9d8a9"><%= ix["dhm"] %> días</td>
+                    <% } else { %>
+                        <td style="background-color: #dac09c;"><%= ix["dhm"] %> días</td>
                     <% } %>     
                 </tr>
             <% }) %>  
