--- a/views/journal.html
+++ b/views/journal.html
@@ -1,7 +1,33 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Creando al personaje</h1>
-<div class="t2">La ficha</div>
-Esto será una guía resumida de lo que deberá reflejar tu ficha
+<div class="t2">La ficha</div><br>
+Esto será una guía resumida de lo que deberá reflejar tu ficha para ser aceptada.
+<br><br><b>— Nombre y Edad</b>
+<br><b>— Origen</b>: De otro mundo o de alguna región de Nerysium. 
+<br><b>— Rango</b>: Tu rango de maestría dentro de la academia. <br><b style="color: red">De momento sólo está abierto el censo para Neófito, Aprendiz o Veterano. </b>
+
+<br><b>— Amparo</b>: Elegir un espíritu protector entre<br><br>
+<ul>
+    <li>El aventurero (Zanark)</li>
+    <li>El crítico (Orion)</li>
+    <li>El sutil (Cetus)</li>
+    <li>El observador (Eridan)</li>
+</ul>
+
+<i>Recuerda quelos espíritus están descritos en la ambientación y los clanes en el mapa. Si no lo tienes claro puedes pensar primero la personalidad y luego ver con cual encaja, o incluso dejarnos al staff decidir por ti en base a la personalidad de tu pj</i>
+
+
+<br><br><b>— Virtudes</b> 
+<br><b>— Defectos</b>  
+
+<br><br>
+<i>Puedes poner tantas virtudes como quieras, pero por cada una que añadas se debe elegir un defecto.</i>
+
+<br><br><b>— Personalidad</b> (opcional)
+<br><b>— Trasfondo</b> (opcional)
+
+<br><br>
+<i>Aunque estas dos últimas sean opcionales es recomendable que tengas planteado incluirlas a la larga para conectar tu personaje mejor con la ambientación.</i>
 
 <%- include(`./partials/bot-part.html`) %>
 
