--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Narysium rol</h1>
 <p class="fl">
-    Hubo una vez, un mestizo que huyó de la muerte. Queriendo ponerse a salvo a él y a su gente llevó a cabo un arriesgado ritual que consumió su vida para dar forma a Narysium, un mundo nuevo, que sirviera de cobijo a los suyos, robando la magia del mundo de origen cierta fecha caprichosa en el vigésimo noveno día del segundo mes del año. Así, dicha fecha desaparecía de los calendarios, un día secuestrado por un mundo mágico que sólo conectaba con el mundo humano de cuatro en cuatro años. Tan sólo un día era el tiempo en que la magia era devuelta a su origen, para después volver a desaparecer.<br><br>
+    Hubo una vez, un mestizo que huyó de la muerte. Queriendo ponerse a salvo a él y a su gente, llevó a cabo un arriesgado ritual que consumió su vida para dar forma a Narysium, un mundo nuevo, que sirviera de cobijo a los suyos, robando la magia del mundo de origen cierta fecha caprichosa en el vigésimo noveno día del segundo mes del año. Así, dicha fecha desaparecía de los calendarios, un día secuestrado por un mundo mágico que sólo conectaba con el mundo humano de cuatro en cuatro años. Tan sólo un día era el tiempo en que la magia era devuelta a su origen, para después volver a desaparecer.<br><br>
 </p>
 
     <center>❃ ❃ ❃</center>
