--- a/views/normas.html
+++ b/views/normas.html
@@ -19,7 +19,7 @@
     <br><br><b>— Hiatus</b>: Para facilitarnos la gestión, se piede que las cuentas ausentes se pongan la marca de "[Hiatus]" o similar en el nombre.
     <br><br><b>— Solicitar ausencia</b>: Se puede solicitar una ausencia por privado. Sólamente dinos hasta cuando piensas que durará la ausencia y nosotros te mantendremos como miembro.
     <br><br><b>— Prolongar ausencia</b>: Se necesita un motivo de peso para prolongar la ausencia.
-    <br><br><b>— Foráneos</b>: Se puede seguir a un máximo de 4 cuentas ajenas al fake, sin embargo, interactuar con ellas tampoco cuenta como actividad. <b>Es importante</b> que cada uno se cree una lista de twitter para incluir a todos los foráneos mutuals.
+    <br><br><b>— Foráneos</b>: Se puede seguir a un máximo de 5 cuentas ajenas al fake, sin embargo, interactuar con ellas tampoco cuenta como actividad. <b>Es importante</b> que cada uno se cree una lista de twitter para incluir a todos los foráneos mutuals. También pedimos que sólo interactúen con éstos mediante menciones o citas, pues ya que el resto no podrá verlo causaría confusión.
     <br><br><b>— Despedidas</b>: Agradeceríamos que si te fueras a ir, nos lo comunicases antes para hacer lo propio.
 <br><br>
 <div class="t2">Calidad</div>
