--- a/views/normas.html
+++ b/views/normas.html
@@ -37,7 +37,7 @@
 <br><br><b>— Respeto</b>: Un fake no es nada sin sus miembros, por ello se pide respeto entre ustedes para que la estancia en Narysium rol sea agradable para todos. No hay frase oculta.
 <br><br><b>— Bardos</b>: Cualquier problema que haya en el mismo con algún otro miembro, pedimos que se nos notifique por privado y la administración determinará qué hacer.
 <br><br><b>— Sexrol</b>: El sexrol está permitido en el fake siempre y cuando sea por mención o mensajería privada.
-<br><br><b>— Contenido sensible</b>: En este fake queremos dejar cierta libertad a la hora de subir "seductives"; Pero existe una línea que separa lo que es una imagen <i>"sugerente y picante pero estética"</i> de una <i>"obscena y grosera" (semen, anatomías desproporcionadas, etc)</i>. Lo segundo está prohibido, esperamos que sepan discernir sobre esta distinción. De todas formas, abusar mucho de este contenido sea de uno u otro será motivo de llamada de atención.
+<br><br><b>— Contenido sensible</b>: En este fake queremos dejar cierta libertad a la hora de subir "seductives"; Pero existe una línea que separa lo que es una imagen <i>"sugerente y picante pero estética"</i> de una <i>"obscena y grosera" (semen, anatomías desproporcionadas, etc)</i>. Lo segundo está prohibido, esperamos que sepan discernir sobre esta distinción. De todas formas, abusar mucho aunque sea del primero, será motivo de llamada de atención, y de strike si no se hace caso.
 <br><br>
  
 <%- include(`./partials/bot-part.html`) %>
